updated maps and location

--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@
                                 </div>
                                 <div class="col-md-3">
                                     <div class="date" id="date2" data-target-input="nearest">
-                                        <select class="form-control" id="roomNumber" name="roomNumber">
-                                            <option>Select room</option>
+
+                                        <label for="select3">Select A Room</label>
+                                        <select class="form-select" id="select3">
                                             <option value="1">DP 101</option>
                                             <option value="2">DP 102</option>
                                             <option value="3">DP 103</option>
@@ -283,7 +284,7 @@
                                     <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
                                     <small><i class="fa fa-wifi text-primary me-2"></i>Wifi</small>
                                 </div>
-                                <p class="text-body mb-3">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                                <p class="text-body mb-3">Indulge in our Junior Suite, the epitome of comfort and privacy, featuring a self-contained space and complimentary Wi-Fi for an immersive and connected experience</p>
                                 <div class="d-flex justify-content-between">
                                     <a class="btn btn-sm btn-primary rounded py-2 px-4" href="#">View Detail</a>
                                     <a class="btn btn-sm btn-dark rounded py-2 px-4" href="booking.html">Book Now</a>
@@ -313,7 +314,7 @@
                                     <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
                                     <small><i class="fa fa-wifi text-primary me-2"></i>Wifi</small>
                                 </div>
-                                <p class="text-body mb-3">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                                <p class="text-body mb-3">Experience unparalleled luxury in our Executive Suite – a self-contained haven offering complimentary Wi-Fi and a delightful breakfast to elevate your stay to new heights.</p>
                                 <div class="d-flex justify-content-between">
                                     <a class="btn btn-sm btn-primary rounded py-2 px-4" href="#">View Detail</a>
                                     <a class="btn btn-sm btn-dark rounded py-2 px-4" href="booking.html">Book Now</a>
@@ -343,7 +344,7 @@
                                     <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
                                     <small><i class="fa fa-wifi text-primary me-2"></i>Wifi</small>
                                 </div>
-                                <p class="text-body mb-3">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                                <p class="text-body mb-3">Unwind in our Super Deluxe suite, a lavish and self-contained retreat complemented by free Wi-Fi, breakfast, and the added convenience of complimentary transport to and from the airport or any destination within 20km from our lodge.</p>
                                 <div class="d-flex justify-content-between">
                                     <a class="btn btn-sm btn-primary rounded py-2 px-4" href="#">View Detail</a>
                                     <a class="btn btn-sm btn-dark rounded py-2 px-4" href="booking.html">Book Now</a>
@@ -415,7 +416,7 @@
                                 </div>
                             </div>
                             <h5 class="mb-3">Rooms & Appartment</h5>
-                            <p class="text-body mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="text-body mb-0">Discover unparalleled comfort and style in our Rooms and Apartments, where each space is meticulously designed to provide a seamless blend of luxury and convenience, ensuring a memorable and delightful stay</p>
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
@@ -426,7 +427,7 @@
                                 </div>
                             </div>
                             <h5 class="mb-3">Food & Restaurant</h5>
-                            <p class="text-body mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="text-body mb-0">Savor exquisite culinary experiences in our Food & Restaurant offerings. Indulge in a diverse menu crafted with passion, where every dish is a culinary masterpiece, creating a delightful dining experience for our esteemed guests.</p>
                         </a>
                     </div>
                     <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -459,7 +460,7 @@
                                 </div>
                             </div>
                             <h5 class="mb-3">Event & Party</h5>
-                            <p class="text-body mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="text-body mb-0">Elevate your special occasions with our Event & Party services. From intimate gatherings to grand celebrations, our dedicated team ensures seamless planning and execution, creating memorable experiences for you and your guests.</p>
                         </a>
                     </div>
                     <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
@@ -633,7 +634,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h6 class="section-title text-start text-primary text-uppercase mb-4">Contact</h6>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kivule, Dar es Salaam, Tanzania</p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i><a href="https://maps.app.goo.gl/hApy3nPR2qR5AhJc6">Kivule, Dar es Salaam, Tanzania</a></p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+255 713 383815</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>nyumbanilodge@gmail.com</p>
                         <div class="d-flex pt-2">
