--- a/booking.html
+++ b/booking.html
@@ -187,7 +187,7 @@
                                     <div class="col-md-6">
                                         <div class="form-floating">
                                             <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                            <label for="email">Your Email</label>
+                                            <label for="email">Phone</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
@@ -202,32 +202,20 @@
                                             <label for="checkout">Check Out</label>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <select class="form-select" id="select1">
-                                              <option value="1">Adult 1</option>
-                                              <option value="2">Adult 2</option>
-                                              <option value="3">Adult 3</option>
-                                            </select>
-                                            <label for="select1">Select Adult</label>
-                                          </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <select class="form-select" id="select2">
-                                              <option value="1">Child 1</option>
-                                              <option value="2">Child 2</option>
-                                              <option value="3">Child 3</option>
-                                            </select>
-                                            <label for="select2">Select Child</label>
-                                          </div>
-                                    </div>
                                     <div class="col-12">
                                         <div class="form-floating">
                                             <select class="form-select" id="select3">
-                                              <option value="1">Room 1</option>
-                                              <option value="2">Room 2</option>
-                                              <option value="3">Room 3</option>
+                                                <option value="1">DP 101</option>
+                                                <option value="2">DP 102</option>
+                                                <option value="3">DP 103</option>
+                                                <option value="4">DP 104</option>
+                                                <option value="5">DP 105</option>
+                                                <option value="6">KP 106</option>
+                                                <option value="7">DP 107</option>
+                                                <option value="8">DP 108</option>
+                                                <option value="9">DP 109</option>
+                                                <option value="10">DP 110</option>
+                                                <option value="11">DP 111</option>
                                             </select>
                                             <label for="select3">Select A Room</label>
                                           </div>
