--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <div class="p-3" style="max-width: 700px;">
                                 <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Nyumbani Lodge</h6>
                                 <h1 class="display-3 text-white mb-4 animated slideInDown">Discover A Brand Luxurious Lodge</h1>
-                                <a href="room.html#room" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Rooms</a>
+                                <a href="index.html#room" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Rooms</a>
                                 <a href="booking.html#booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book A Room</a>
                             </div>
                         </div>
@@ -120,7 +120,7 @@
                             <div class="p-3" style="max-width: 700px;">
                                 <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Nyumbani Lodge</h6>
                                 <h1 class="display-3 text-white mb-4 animated slideInDown">Discover A Brand Luxurious Lodge</h1>
-                                <a href="room.html#room" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Rooms</a>
+                                <a href="index.html#room" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Rooms</a>
                                 <a href="booking.html#booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book A Room</a>
                             </div>
                         </div>
@@ -162,8 +162,9 @@
                                 <div class="col-md-3">
                                     <div class="date" id="date2" data-target-input="nearest">
 
-                                        <label for="select3">Select A Room</label>
+                                        <!-- <label for="select3">Select A Room</label> -->
                                         <select class="form-select" id="select3">
+                                            <option value="">Select Room</option>
                                             <option value="1">DP 101</option>
                                             <option value="2">DP 102</option>
                                             <option value="3">DP 103</option>
