--- a/booking.html
+++ b/booking.html
@@ -289,7 +289,8 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h6 class="section-title text-start text-primary text-uppercase mb-4">Contact</h6>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kivule, Dar es Salaam, Tanzania</p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i><a href="https://maps.app.goo.gl/hApy3nPR2qR5AhJc6">Kivule, Dar es Salaam, Tanzania</a></p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i><a href=""></a>Kivule, Dar es Salaam, Tanzania</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+255 713 383815</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>nyumbanilodge@gmail.com</p>
                         <div class="d-flex pt-2">
