--- a/reception/room.html
+++ b/reception/room.html
@@ -115,7 +115,7 @@
                                         </div>
                                     </div>
                                     <div class="col-12">
-                                        <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
+                                        <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
                                     </div>
                                 </div>
                             </form>
